# dex-bot

./: .gitignore  .gitmodules  README.md
blockchain/: README.md
blockchain/config/: local.anvil.env
blockchain/src/backrun/: SandboxBackrun.sol
blockchain/src/dexes/: Pool1.sol  Pool2.sol  SandboxDex.sol
blockchain/src/tokens/: SandboxERC20.sol  TokenA.sol  TokenB.sol
knight/: CMakeLists.txt  README.md  config.json
knight/src/: CMakeLists.txt  main.cpp
knight/src/builder/: errors.h  pending_feed.cpp  pending_feed.h  rest_client.cpp  rest_client.h
knight/src/common/: config.h  envelope.h  errors.h  gateway.cpp  gateway.h  log.h  queue.h  runtime.cpp  runtime.h  runtime_factory.cpp  runtime_factory.h
knight/src/gateway/: errors.h  gateway.cpp  gateway.h
knight/src/network/: rest_client.cpp  rest_client.h  ws_source.cpp  ws_source.h
knight/src/runtime/: runtime.cpp  runtime.h  runtime_factory.cpp  runtime_factory.h  signal_listener.cpp  signal_listener.h
knight/src/utils/: utils.cpp  utils.h
scenarios/: scenario_support.py  token-transfer.py  token-transfer.zsh
scenarios/backrun/: README.md  run.py
scenarios/bundle-simulation/: README.md  run.py
scenarios/mempool-sequence/: README.md  run.py
scenarios/seed-pools/: README.md  run.py  run.zsh
scenarios/token-transfer/: README.md  run.py
scenarios/victim-swap/: README.md  run.py
scenarios/victim-swap-revert/: README.md  run.py
services/block-builder/: README.md  pyproject.toml
services/block-builder/block_builder/: __init__.py  anvil.py  app.py  bundle.py  main.py  mempool.py  transaction.py  ws.py
services/block-builder/docs/: endpoints.md
